# fcc-arithmetic-formatter

./: arithmetic_arranger.py  pyproject.toml
