[tool.poetry]
name = "arithmetic-formatter"
version = "1.0.0"
description = ""
authors = ["Jason Tolbert <jasonalantolbert@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.2"
numexpr = "^2.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
